--- a/personalwebsite/templates/intro.html
+++ b/personalwebsite/templates/intro.html
@@ -1,10 +1,18 @@
 {% extends "base.html" %}
 {% block content %}
-<div class="jumbotron">
-        <h1 class="display-4">Intro page goes here</h1>
-        <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
-        <hr class="my-4">
-        <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
-        <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
+<div class="jumbotron jumbotron-fluid">
+        <div class="container container-fluid">
+        <img src="static/profile_thumbnail.jpg" class="rounded-circle float-right" alt="Rounded Image" alt="Banner" data-toggle="modal" data-target="#myModal">
+        <div id="myModal" class="modal fade" tabindex="-1" role="dialog">
+                <div class="modal-dialog">
+                        <div class="modal-content">
+                                <div class="modal-body">
+                                        <img src="static/profile_pic.jpg" class="img-fluid">
+                                </div>
+                        </div>
+                </div>
+        </div>
+        <h1 class="display-4">About me</h1>
+</div>
 </div>     
 {% endblock %}
