--- a/personalwebsite/templates/about.html
+++ b/personalwebsite/templates/about.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
-<div class="jumbotron">
+<div id="about" class="jumbotron">
         <h1 class="display-4">About Website goes here</h1>
         <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
         <hr class="my-4">
