--- a/personalwebsite/templates/base.html
+++ b/personalwebsite/templates/base.html
@@ -1,54 +1,77 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
+    <title>Bootstrap Example</title>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/custom.css') }}">
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-    <title></title>
+    <style>
+        body {
+          position: relative;
+        }
+        ul.nav-pills {
+          position: relative;
+          vertical-align: middle;
+        }
+        /* Vary this to customize section height  */
+        div.col-8 div {
+          height: 800px;
+        }
+        .nav-offset {
+          top: 60px;
+        }
+        .spaced {
+          height: 100%;
+          padding: 0;
+          list-style: none;
+          display: flex;
+          flex-direction: column;
+          justify-content: space-between
+          /* margin: 0; */
+        }
+        .spaced li {
+          height: 100px;
+        }
+        </style>
   </head>
-  <body>
+
+
+  <!--Begin body-->
+  <body data-spy="scroll" data-target="#navbar2" data-offset="50">
+
+
+    <!--Header Nav Bar-->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-            <a class="navbar-brand" href="#">Ragu's personal linkedin</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNavDropdown">
-              <ul class="navbar-nav">
-                <li class="nav-item active">
-                  <a class="nav-link" href="{{url_for('core.index')}}">Home <span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                          Experience & Skills
-                        </a>
-                        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                          <a class="dropdown-item" href="#">Certifications</a>
-                          <a class="dropdown-item" href="#">Experience</a>
-                          <a class="dropdown-item" href="#">Technologies that I enjoy...</a>
-                        </div>
-                      </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="{{url_for('core.about')}}">About website</a>
-                </li>
-                <li class="nav-item dropdown">
-                  <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    Projects/Interests
-                  </a>
-                  <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                    <a class="dropdown-item" href="#">Current Projects</a>
-                    <a class="dropdown-item" href="#">Projects</a>
-                    <a class="dropdown-item" href="#">Future goals</a>
-                  </div>
-                </li>
-              </ul>
-            </div>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNavDropdown">
+            <ul class="navbar-nav">
+              <li class="nav-item active">
+                <a class="nav-link" href="{{url_for('core.index')}}">Home <span class="sr-only">(current)</span></a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="{{url_for('core.about')}}">About website</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Contact</a>
+              </li>
+            </ul>
+          </div>
     </nav>
+    <!--End of header Nav bar-->
+
+
     {% block content %}
-
-
     {% endblock %}
+
+
+
+  <!--Footer Nav Bar-->
   <nav class="navbar fixed-bottom navbar-dark bg-dark justify-content-center">
     <span class="navbar-text">Website programmed using</span>
     &nbsp;&nbsp;
@@ -61,7 +84,12 @@
     <a class="nav-text" href="https://cloud.google.com/" target="_blank">Google Cloud Platform</a>
     &nbsp;&nbsp;&nbsp;
     <a class="nav-text" href="https://cloud.google.com/appengine/" target="_blank">Google App Engine</a>
-
   </nav>
+  <!--End of footer Nav Bar-->
+
+
 </body>
+<!--End Body-->
+
+
 </html>
