completed profile section

--- a/personalwebsite/templates/intro_test.html
+++ b/personalwebsite/templates/intro_test.html
@@ -55,10 +55,71 @@
       
           <main class="col-md-9 ml-sm-auto col-lg-10 px-4" role="main"><div class="chartjs-size-monitor" style="left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; visibility: hidden; position: absolute; z-index: -1; pointer-events: none;"><div class="chartjs-size-monitor-expand" style="position:absolute;left:0;top:0;right:0;bottom:0;overflow:hidden;pointer-events:none;visibility:hidden;z-index:-1;"><div style="position:absolute;width:1000000px;height:1000000px;left:0;top:0"></div></div><div class="chartjs-size-monitor-shrink" style="position:absolute;left:0;top:0;right:0;bottom:0;overflow:hidden;pointer-events:none;visibility:hidden;z-index:-1;"><div style="position:absolute;width:200%;height:200%;left:0; top:0"></div></div></div>
             <div id="aboutme" class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom bg-light">    
-              <div class="container">
-                  <h1>Profile</h1>
+              <div class="container text-center">
+                  <h2>Profile</h2>
+                  <p>I am an engineer enthusiastic about computers...</p>
+                  <hr />
+                  <div class = "row">
+                    <div class="col-md-4">
+                      <h3>About me</h3>
+                      <p align = "left">Network Engineer specializing in wireless networking (mobility and access control), Cloud Networking, Route/Switch and security with a special interest in Google cloud, Linux and programming with Python.</p>
+                    </div>
+                    <div class="col-md-4 text-center">
+                        <img src="static/img/profile_thumbnail.jpg" class="rounded-circle img-thumbnail" alt="Rounded Image" alt="Banner" data-toggle="modal" data-target="#myModal"> <!--Adds click to zoom function-->
+                        <div id="myModal" class="modal fade" tabindex="-1" role="dialog">
+                                <div class="modal-dialog">
+                                        <div class="modal-content">
+                                                <div class="modal-body">
+                                                        <img src="static/img/profile_pic.jpg" class="img-fluid">
+                                                </div>
+                                        </div>
+                                </div>
+                        </div>
+                        <div class="row row-icon"  id="follow-buttons">
+                          <div class="col">
+                            <a class="github-button" href="https://github.com/RaguRJ" target="_blank" aria-label="GitHub @RaguRJ">Girhub</a>
+                          </div>
+                          <div class="col">
+                            <a href="https://www.linkedin.com/in/rj1994/" target="_blank">
+                              <img src="static/img/linkedin_icon.png">
+                            </a>
+                          </div>
+                          <div class="col">
+                            <a href="https://www.facebook.com/ragurj1994" target="_blank">
+                              <span style="font-size: 36px; color: #3b5998;">
+                                <i class="fab fa-facebook"></i>
+                              </span>
+                            </a>
+                          </div>
+                          <div class="col">
+                              <a href="https://www.instagram.com/ragu_rj/" target="_blank">
+                                <span style="font-size: 36px; color: black;">
+                                  <i class="fab fa-instagram"></i>
+                                </span>
+                              </a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <h3>Details</h3>
+                        <p align="left">
+                          <strong>Name:</strong>
+                          <br />
+                          Ragu Raman Jayaraman
+                          <br />
+                          <strong>Current role:</strong>
+                          <br />
+                          Network Engineer
+                          <br />
+                          <strong>Interests:</strong>
+                          <br />
+                          Cloud computing, DevOps, Programming, Networking(The introverted kind with computers)
+                          <br />
+                        </p>
+                      </div>                    
+                  </div>
                   <br>
-                  <p>Try to scroll this section and look at the navigation list while scrolling!</p>
+                  <p></p>
                   <br>
               </div>
             </div>
