--- a/personalwebsite/templates/base.html
+++ b/personalwebsite/templates/base.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <title>Bootstrap Example</title>
+    <title>Ragu's Website</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -9,6 +9,12 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <!-- Github follow button script -->
+    <script async defer src="https://buttons.github.io/buttons.js"></script>
+    <!-- Linkedin follow button script -->
+    <script src="https://platform.linkedin.com/in.js" type="text/javascript">lang: en_US</script>
+    <!-- Fontawesome script -->
+    <script src="https://kit.fontawesome.com/78e76acb00.js" crossorigin="anonymous"></script>
     <style>
         body {
           position: relative;
@@ -23,6 +29,7 @@
         }
         .nav-offset {
           top: 60px;
+          /* z-index: -3; */
         }
         .spaced {
           height: 100%;
@@ -35,6 +42,11 @@
         }
         .spaced li {
           height: 100px;
+        }
+        .row-icon {
+          display: flex;
+          align-items: center;
+          justify-content: center;
         }
         </style>
   </head>
