--- a/personalwebsite/templates/about.html
+++ b/personalwebsite/templates/about.html
@@ -1,11 +1,14 @@
 {% extends "base.html" %}
 {% block content %}
-<div id="about" class="jumbotron">
-        <h1 class="display-4">About Website goes here</h1>
-        <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
-        <hr class="my-4">
-        <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
-        <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
-</div>     
-
+<div class="jumbotron">
+        <h1 class="display-4">About Website</h1>
+        <p class="lead">I have built this website as a pet project to put my cloud computing and programming skills to use. The architecture for the website has been added below. Reach out to me if you would like to have a discussion about the website.</p>
+        <br />
+</div>
+<div id="about" class="container-fluid">
+        <a href="https://storage.googleapis.com/website-train-resume/architecture.png" target="_blank">
+                <img src="static/img/architecture.png" class="architecture">      
+        </a>
+        <br /><br /><br /><br /><br /><br /><br /><br />
+</div>
 {% endblock %}
