--- a/personalwebsite/templates/base.html
+++ b/personalwebsite/templates/base.html
@@ -5,10 +5,11 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/custom.css') }}">
+    <link rel="stylesheet" type= "text/css" href="{{ url_for('static', filename='css/custom.css') }}">
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+
     <!-- Github follow button script -->
     <script async defer src="https://buttons.github.io/buttons.js"></script>
     <!-- Linkedin follow button script -->
@@ -83,7 +84,21 @@
         .carousel-caption h5 {
           color:          black !important;
         }
-        </style>
+        .skill-title {
+          display: inline-block;
+          width: 60%;
+          font-size: 14px;
+        }
+        .skill-score {
+          float: right;
+        }
+        .list-left-align {
+          text-align: left;
+        }
+        .skill-score-legend {
+          float: left;
+        }
+      </style>
   </head>
 
 
@@ -102,10 +117,10 @@
                 <a class="nav-link" href="{{url_for('core.index')}}">Home <span class="sr-only">(current)</span></a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="{{url_for('core.about')}}">About website</a>
+                <a class="nav-link" href="{{url_for('core.resume')}}">Resume</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Contact</a>
+                <a class="nav-link" href="{{url_for('core.about')}}">About website</a>
               </li>
             </ul>
           </div>
