corrected google spelling

--- a/personalwebsite/templates/intro_test.html
+++ b/personalwebsite/templates/intro_test.html
@@ -831,7 +831,7 @@
                     <div class="container-fluid">
                       <ul>
                         <li>
-                          <h6><strong>Gooogle Cloud Platform - Online retail store app deployment</strong></h6>
+                          <h6><strong>Google Cloud Platform - Online retail store app deployment</strong></h6>
                           <div class="container-fluid">
                             <p>
                               Migrated an on-prem business network serving a public-facing online retail store web application to google cloud. Configured a hybrid networking model where both the on-prem data center and the cloud production environment were communicating with each other. Compartmentalized the GCP environment for Production, Development, Management and Business intelligence workloads with the help of Palo Alto firewalls (deployed in GCP),  GCP VPCs, routes, and firewalls etc. Used Terraform to deploy resources in google cloud using infrastructure as a code approach.                            </p>
